<resources>
    <string name="app_name">PiggyBox</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Do you want to reset?</string>
    <string name="account_book">Account book</string>
    <string name="start">Start</string>
    <string name="whatname">What"&apos;"s your name?</string>
    <string name="money">Money</string>
    <string name="back">Press the "&apos;"Back"&apos;" button again to exit.</string>
    <string name="saving">Saving</string>
    <string name="amont">Please enter an amount.</string>
    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="exceed">Exceed the amount saved.</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="reset">RESET</string>
    <string name="ok">OK</string>
    <string name="hi">Hi,</string>
    <string name="next">Next</string>
    <string name="pleaseNmae">Please enter a nickname.</string>
    <string name="admob_app_id">ca-app-pub-9949413160725384~8100255562</string>
    <string name="banner_ad_unit_id">ca-app-pub-9949413160725384/7445842961</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
</resources>