<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded"
    android:orientation="vertical"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="40dp"
            android:textColor="#000000"
            android:fontFamily="@font/black"
            android:text="@string/reset"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:weightSum="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:textColor="#343434"
            android:fontFamily="@font/black"
            android:gravity="center"
            android:textSize="20sp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:fontFamily="@font/black"
            android:textSize="18sp"
            android:textColor="#3b1e1e"
            android:background="@drawable/rdius_2"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:fontFamily="@font/black"
            android:textSize="18sp"
            android:textColor="#3b1e1e"
            android:layout_height="match_parent"
            android:background="@drawable/radius_3"
            android:text="@string/reset" />

    </LinearLayout>
</LinearLayout>
