<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="579"
    tools:context=".Activitys.SavingListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="579">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:weightSum="375">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="horizontal"
                android:weightSum="375">

                <ImageView
                    android:id="@+id/back_btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:src="@drawable/ic_chevron_left_black_24dp"></ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="254">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textColor="#343434"
                    android:gravity="center_vertical"
                    android:paddingLeft="80dip"
                    android:fontFamily="@font/black"
                    android:drawableLeft="@drawable/ic_date_range_black_24dp"
                    android:drawablePadding="5dip"
                    android:id="@+id/text_time"></TextView>
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="71"
                android:layout_height="match_parent"
                android:text="@string/reset"
                android:fontFamily="@font/black"
                android:textColor="#BDBDBD"
                android:textSize="16sp"
                android:gravity="start|center"
                android:id="@+id/reset"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="56"
            android:background="#f3f3f3"
            android:orientation="horizontal"
            android:weightSum="375">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="125">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/black"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textColor="#343434"
                    android:textSize="16sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="125">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/black"
                    android:gravity="center"
                    android:text="@string/saving"
                    android:textColor="#343434"
                    android:textSize="16sp"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="125">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/black"
                    android:gravity="center"
                    android:text="@string/total"
                    android:textColor="#343434"
                    android:textSize="16sp"></TextView>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="366"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#000000"
                android:scrollbars="vertical"></ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="51">

            <com.google.android.gms.ads.AdView

                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="56">

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:background="#ffdf2c"
                android:fontFamily="@font/black"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#3b1e1e"
                android:textSize="18sp"></Button>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>

