<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="579"
    android:background="#ffffff"
    tools:context=".Activitys.SavingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:weightSum="375"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="303">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/money"
                android:textColor="#343434"
                android:textSize="18sp"
                android:paddingLeft="20sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/black"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="72">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_cancel_black_24dp"
                android:scaleType="center"
                android:id="@+id/cancel"></ImageView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edittext_money"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:drawableLeft="@drawable/image_custom"
            android:gravity="center_vertical|right"
            android:textSize="24sp"
            android:singleLine="true"
            android:hint="0"
            android:maxLength="10"
            android:textColorHint="#343434"
            android:fontFamily="@font/black"
            android:textColor="#343434"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:paddingLeft="12dp"
            android:paddingRight="20dp"
            android:background="#f3f3f3"></EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="571">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        >
        <com.google.android.gms.ads.AdView

            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffdf2c"
            android:text="@string/saving"
            android:textColor="#3b1e1e"
            android:fontFamily="@font/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:id="@+id/saving_btn"></Button>
    </LinearLayout>


</LinearLayout>