<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="579"
    tools:context=".Activitys.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="579">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="horizontal"
        android:weightSum="375">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hi"
            android:paddingLeft="20sp"
            android:textSize="16sp"
            android:textColor="#343434"
            android:fontFamily="@font/black"
            android:id="@+id/hi"
            android:gravity="center"></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="300"
            android:textColor="#343434"
            android:fontFamily="@font/black"
            android:textSize="16sp"
            android:gravity="left|center"
            android:id="@+id/nickname_view"
            ></TextView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="72">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_event_available_black_24dp"
                android:scaleType="center"

                android:id="@+id/calender"></ImageView>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="96"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="206">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/img"
            android:src="@drawable/pig_1"></ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="120"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="51"
        >
        <com.google.android.gms.ads.AdView

            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56"
        android:orientation="horizontal"
        android:weightSum="375"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="105"
            android:background="#ffdf2c"
            android:text="@string/money"
            android:textColor="#3b1e1e"
            android:fontFamily="@font/black"
            android:textSize="18sp"
            android:id="@+id/money_saved1"
            android:gravity="center"></TextView>
        <TextView
            android:id="@+id/money_saved"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="270"
            android:background="#ffdf2c"
            android:focusable="false"
            android:paddingRight="20sp"
            android:textColor="#3b1e1e"
            android:text="0"
            android:fontFamily="@font/black"
            android:textSize="18sp"
            android:gravity="center_vertical|right">

        </TextView>


    </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:fabSize="mini"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="280sp"
            android:src="@drawable/ic_remove_black_24dp"
            app:backgroundTint="#ffdf2c"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="220sp"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="#ffdf2c"
            app:elevation="6dp"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="150sp"
            app:backgroundTint="#ffdf2c"
            android:src="@drawable/ic_dehaze_black_24dp" />
    </FrameLayout >
</RelativeLayout>